add water test kit to home page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <h1>Introduction</h1>
     <section>
-        <p class="intro">In this page I am going to outline what is needed to set up your very first tropical freshwater
+        <p class="intro">In this page we am going to outline what is needed to set up your very first tropical
+            freshwater
             aquarium.
             Throughout this website we will go through the what is needed when setting up your very first freshwater
             tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have
@@ -43,20 +44,19 @@
 
     <h1>What you need to get started</h1>
     <section>
-        <p class="intro"> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
-            this section I will go over what you need to start and some things you need to think about before making a
-            purchase. As part of your equipment we reccomend getting <a
-                href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help
-            you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
+        <p class="intro"> When starting your fish keeping hobby, there a few things to consider before buying a tank and
+            adding a fish. In the section below, we wil go over some of the toipics that you will need to consider
+
+
         </p>
     </section>
-    
+
     <section class="container">
         <div>
             <h3>Location, Location, Location</h3>
             <img src='assets/images/location.jpg' alt="Location of a fish tank in a hall" class="box-1-image">
             <p>Picking a location for your aquarium is more important than you think. Try not to have it beside windows
-                or heating or aircon vents. As the constant light will cause algae blooms, and the flucuations from the
+                or heating or aircon vents. As the constant light will cause algae blooms, and the fluctuations from the
                 heating or air vents will stress out your fish.
 
             </p>
@@ -66,7 +66,16 @@
             <h3>Cleaning/Maintence equipment</h3>
             <img src='assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
-                having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
+                having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover. </p>
+        </div>
+
+        <div>
+            <h3>Water test Kit</h3>
+            <img src='assets/images/Water test kit.jpg' alt="API Water test kit" class="box-1-image">
+            <p>A water test kit will help you test your water for traces of Ammonia, Nitres and Nitrates. These three
+                elements can build up over time from fish waste and uneaten food and are very toxic to your fish. Having
+                a water test kit will allow you to test your water on a regular basis and notify you when the levels
+                are too high and a water change is needed. </p>
         </div>
 
         <div>
@@ -77,7 +86,7 @@
                 recommend at least 20 gallons (75 litters)</p>
         </div>
     </section>
-    
+
     <section class="container">
         <div>
             <h3>Filter</h3>
@@ -92,7 +101,7 @@
             <h3>Heater and Thermometer</h3>
             <img src='assets/images/Heater.jpg' alt="aquarium heater" class="box-2-image">
             <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a
-                heater. It’s also advise to have a thermometer, this will help you keep track on the temperature of the
+                heater. It’s also advised to have a thermometer, this will help you keep track on the temperature of the
                 water.</p>
         </div>
 
