changed the introduction and what you need to get started section of the home page

--- a/fish.html
+++ b/fish.html
@@ -33,11 +33,12 @@
     </section>
 
     <h1>Choosing your fish</h1>
+    
     <p class="intro">
         Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for
         begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can
         live peacefully together. To help you through this selction process, we have set out a list of fish that we
-        think is great for begginers.
+        think are great for begginers.
     </p>
 
     <h1>Center Piece Fish</h1>
