--- a/index.html
+++ b/index.html
@@ -33,22 +33,19 @@
     <h1>Introduction</h1>
     <section>
         <p class="intro">In this page we am going to outline what is needed to set up your very first tropical
-            freshwater
-            aquarium.
-            Throughout this website we will go through the what is needed when setting up your very first freshwater
+            freshwater aquarium. Throughout this website we will go through the what is needed when setting up your very first freshwater
             tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have
             the best chance of success and also some plants that are not only great for beginners but are also
             beneficial to your aquarium. So let’s fist take a look at what you might need to set up your very first
-            aquarium.</p>
+            aquarium.
+        </p>
     </section>
 
     <h1>What you need to get started</h1>
     <section>
         <p class="intro"> When starting your fish keeping hobby, there a few things to consider before buying a tank and
-            adding a fish. In the section below, we wil go over some of the toipics that you will need to consider
-
-
-        </p>
+            adding a fish. In the section below, we wil go over some of the topics that you will need to consider before
+            getting that first fish.</p>
     </section>
 
     <section class="container">
