--- a/plants.html
+++ b/plants.html
@@ -34,7 +34,7 @@
     <section>        
         <p class="intro">Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
             your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in
-            the water. All the plants we ahve here listed bewlo are all great for beginner aquarist. They are all easy to look after and do not require anythiong other than some root tabs and some good lighting.
+            the water. All the plants we have listed below are all great for beginner aquarist. They are all easy to look after and do not require anythiong other than some root tabs and some good lighting.
         </p>
     </section>
 
