--- a/fish.html
+++ b/fish.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Keeping Fish Simple</title>
-
-    <title>Document</title>
+    
 </head>
 
 <body>
@@ -104,7 +103,7 @@
 
         <div>
             <h2>Bolivian Ram</h2>
-            <img src='assets/images/Bolivian ram.jpg' alt="Honey Gourami fish" class="fish-image">
+            <img src='assets/images/Bolivianram.jpg' alt="Honey Gourami fish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -130,7 +129,7 @@
     <section class="container-fish-2">
         <div>
             <h2>Rummy Nose Tetra</h2>
-            <img src='assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
+            <img src='assets/images/RummyNosetetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
             <table>
                 <tr>
                     <th>Tank Size</th>
@@ -149,7 +148,7 @@
 
         <div>
             <h2>Cherry Barb</h2>
-            <img src='assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
+            <img src='assets/images/CherryBarb.jpg' alt="Cherry Barb Fish" class="fish-image">
 
             <table>
                 <tr>
@@ -169,7 +168,7 @@
 
         <div>
             <h2>Ember Tetra</h2>
-            <img src='assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
+            <img src='assets/images/Embertetra.jpg' alt="Ember Tetra fish" class="fish-image">
 
             <table>
                 <tr>
@@ -213,7 +212,7 @@
     <section class="container-fish-3">
         <div>
             <h2>Bronze Corydoras</h2>
-            <img src='assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
+            <img src='assets/images/Bronzecorydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
 
             <table>
                 <tr>
@@ -273,7 +272,7 @@
 
         <div>
             <h2>Hillstream Loach</h2>
-            <img src='assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
+            <img src='assets/images/HillstreamLoach.jpg' alt="Hillstream Loach Fish" class="fish-image">
 
             <table>
                 <tr>
@@ -296,11 +295,11 @@
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" name="fname"><br>
+            <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" name="lname"><br>
+            <input type="text" id="lname" name="lname"><br>
             <label for="email">Email:</label><br>
-            <input type="text" name="email"><br>
+            <input type="text" id="email" name="email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
@@ -308,7 +307,7 @@
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></li>
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
         </ul>
