--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
         <div>
             <h3>Cleaning/Maintence equipment</h3>
-            <img src='assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
+            <img src='assets/images/cleaningkit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
                 having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover. </p>
         </div>
 
         <div>
             <h3>Water test Kit</h3>
-            <img src='assets/images/Water test kit.jpg' alt="API Water test kit" class="box-1-image">
+            <img src='assets/images/Watertestkit.jpg' alt="API Water test kit" class="box-1-image">
             <p>A water test kit will help you test your water for traces of Ammonia, Nitres and Nitrates. These three
                 elements can build up over time from fish waste and uneaten food and are very toxic to your fish. Having
                 a water test kit will allow you to test your water on a regular basis and notify you when the levels
@@ -124,11 +124,11 @@
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" name="fname"><br>
+            <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" name="lname"><br>
+            <input type="text" id="lname" name="lname"><br>
             <label for="email">Email:</label><br>
-            <input type="text" name="email"><br>
+            <input type="text" id="email" name="email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
@@ -136,7 +136,7 @@
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></li>
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
         </ul>
