--- a/plants.html
+++ b/plants.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Keeping Fish Simple</title>
-
-    <title>Document</title>
+    
 </head>
 
 <body>
@@ -46,7 +45,7 @@
         </div>
         <div>
             <h2>Java Moss</h2>
-            <img src='assets/images/Java moss.jpg' alt="Java Moss aquarium plant" class="plant-image">
+            <img src='assets/images/Javamoss.jpg' alt="Java Moss aquarium plant" class="plant-image">
         </div>
         <div>
             <h2>Mini Needle Leaf</h2>
@@ -62,7 +61,7 @@
     <section class="container-plant-1">
         <div>
             <h2>Java Fern</h2>
-            <img src='assets/images/Java Fern.jpg' alt="Java Fern aquarium plant" class="plant-image">
+            <img src='assets/images/JavaFern.jpg' alt="Java Fern aquarium plant" class="plant-image">
         </div>
         <div>
             <h2>Cryptocoryne</h2>
@@ -103,11 +102,11 @@
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" name="fname"><br>
+            <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" name="lname"><br>
+            <input type="text" id="lname" name="lname"><br>
             <label for="email">Email:</label><br>
-            <input type="text" name="email"><br>
+            <input type="text" id="email" name="email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
@@ -115,7 +114,7 @@
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></li>
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
         </ul>
