--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             freshwater aquarium. Throughout this website we will go through the what is needed when setting up your very first freshwater
             tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have
             the best chance of success and also some plants that are not only great for beginners but are also
-            beneficial to your aquarium. So let’s fist take a look at what you might need to set up your very first
+            beneficial to your aquarium. So let’s first take a look at what you might need to set up your very first
             aquarium.
         </p>
     </section>
