--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
     <h1>Introduction</h1>
     <section>
         <p class="intro">In this page we am going to outline what is needed to set up your very first tropical
-            freshwater aquarium. Throughout this website we will go through the what is needed when setting up your very first freshwater
+            freshwater aquarium. Throughout this website we will go through the what is needed when setting up your very
+            first freshwater
             tropical aquarium. We will go through the equipment that is needed, the best fish for beginners, so you have
             the best chance of success and also some plants that are not only great for beginners but are also
             beneficial to your aquarium. So let’s first take a look at what you might need to set up your very first
-            aquarium.
+            aquarium. Also, don't forget to sign up to our Weekly NewsLetter. Each week we will send out a NewsLetter
+            containing advise and information about tropical fish keeping, which will help you on your way to become a successful
+            aquarist
         </p>
     </section>
 
