add text for sign up form

--- a/plants.html
+++ b/plants.html
@@ -102,11 +102,11 @@
         <form id="Sign-up">
             <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fname" name="fname" placeholder="Enter your Name"><br>
             <label for="lname">Last Name:</label><br>
-            <input type="text" id="lname" name="lname"><br>
+            <input type="text" id="lname" name="lname" placeholder="Enter your Surname"><br>
             <label for="email">Email:</label><br>
-            <input type="text" id="email" name="email"><br>
+            <input type="text" id="email" name="email" placeholder="Enter your Email"><br>
             <input type="submit" value="Sign Up" id="button">
         </form>
 
